--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -1,8 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
-
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="753.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="513.0" prefWidth="754.0">
+         <children>
+            <VBox layoutX="-2.0" prefHeight="515.0" prefWidth="753.0">
+               <children>
+                  <MenuBar prefHeight="25.0" prefWidth="565.0">
+                    <menus>
+                      <Menu mnemonicParsing="false" text="Registration">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="Seller" />
+                              <MenuItem mnemonicParsing="false" text="Department" />
+                        </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Help">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="About" />
+                        </items>
+                      </Menu>
+                    </menus>
+                  </MenuBar>
+               </children>
+            </VBox>
+         </children></AnchorPane>
+  </content>
+</ScrollPane>
